--- a/KD.FakeDb/KD.FakeDb.csproj
+++ b/KD.FakeDb/KD.FakeDb.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>KD.FakeDb.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
