--- a/KD.FakeDb/KD.FakeDb.csproj
+++ b/KD.FakeDb/KD.FakeDb.csproj
@@ -7,6 +7,8 @@
     <PackageProjectUrl>https://github.com/Sejoslaw/KD.FakeDb</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Sejoslaw/KD.FakeDb</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/Sejoslaw/KD.FakeDb/blob/master/LICENSE</PackageLicenseUrl>
+    <Authors>Krzysztof Dobrzynski</Authors>
+    <Copyright>https://github.com/Sejoslaw</Copyright>
   </PropertyGroup>
 
 </Project>
