--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -17,7 +17,7 @@
 
     <ApplicationIcon />
 
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
 
     <StartupObject />
   </PropertyGroup>
