--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -20,6 +20,10 @@
     <OutputType>Exe</OutputType>
 
     <StartupObject />
+
+    <SignAssembly>true</SignAssembly>
+
+    <AssemblyOriginatorKeyFile>KD.FakeDb.XUnitTests.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
