--- a/KD.FakeDb.Linq/KD.FakeDb.Linq.csproj
+++ b/KD.FakeDb.Linq/KD.FakeDb.Linq.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>KD.FakeDb.Linq.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
