--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\KD.FakeDb.Factory\KD.FakeDb.Factory.csproj" />
     <ProjectReference Include="..\KD.FakeDb.Linq\KD.FakeDb.Linq.csproj" />
+    <ProjectReference Include="..\KD.FakeDb.XML\KD.FakeDb.XML.csproj" />
     <ProjectReference Include="..\KD.FakeDb\KD.FakeDb.csproj" />
   </ItemGroup>
 
