--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -9,7 +9,7 @@
 
     <PackageLicenseUrl>https://github.com/Sejoslaw/KD.FakeDb/blob/master/LICENSE</PackageLicenseUrl>
 
-    <PackageProjectUrl>https://github.com/Sejoslaw/KD.FakeDb</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Sejoslaw/KD.FakeDb/tree/master/KD.FakeDb.XUnitTests</PackageProjectUrl>
 
     <RepositoryUrl>https://github.com/Sejoslaw/KD.FakeDb</RepositoryUrl>
 
