--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -27,13 +27,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170425-07" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KD.FakeDb.Factory\KD.FakeDb.Factory.csproj" />
+    <ProjectReference Include="..\KD.FakeDb.JSON\KD.FakeDb.JSON.csproj" />
     <ProjectReference Include="..\KD.FakeDb.Linq\KD.FakeDb.Linq.csproj" />
     <ProjectReference Include="..\KD.FakeDb.XML\KD.FakeDb.XML.csproj" />
     <ProjectReference Include="..\KD.FakeDb\KD.FakeDb.csproj" />
