--- a/KD.FakeDb.JSON/KD.FakeDb.JSON.csproj
+++ b/KD.FakeDb.JSON/KD.FakeDb.JSON.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KD.FakeDb.Serialization\KD.FakeDb.Serialization.csproj" />
     <ProjectReference Include="..\KD.FakeDb\KD.FakeDb.csproj" />
   </ItemGroup>
 
