--- a/KD.FakeDb.XML/KD.FakeDb.XML.csproj
+++ b/KD.FakeDb.XML/KD.FakeDb.XML.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KD.FakeDb.Serialization\KD.FakeDb.Serialization.csproj" />
     <ProjectReference Include="..\KD.FakeDb\KD.FakeDb.csproj" />
   </ItemGroup>
 
