--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,11 @@
 image: Visual Studio 2017
+
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+
 before_build:
   - cmd: dotnet restore
+
+test_script:
+  - ps: dotnet test .\KD.FakeDb.XUnitTests\KD.FakeDb.XUnitTests.csproj
