Unsign assemblies (just unchecked).

--- a/KD.FakeDb.Factory/KD.FakeDb.Factory.csproj
+++ b/KD.FakeDb.Factory/KD.FakeDb.Factory.csproj
@@ -7,7 +7,7 @@
     <RepositoryUrl>https://github.com/Sejoslaw/KD.FakeDb</RepositoryUrl>
     <Authors>Krzysztof Dobrzynski</Authors>
     <Copyright>https://github.com/Sejoslaw</Copyright>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>KD.FakeDb.Factory.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
