--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -21,7 +21,7 @@
 
     <StartupObject />
 
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
 
     <AssemblyOriginatorKeyFile>KD.FakeDb.XUnitTests.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
