--- a/KD.FakeDb.Linq/KD.FakeDb.Linq.csproj
+++ b/KD.FakeDb.Linq/KD.FakeDb.Linq.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>KD.FakeDb.Linq.snk</AssemblyOriginatorKeyFile>
     <Copyright>https://github.com/Sejoslaw</Copyright>
     <PackageLicenseUrl>https://github.com/Sejoslaw/KD.FakeDb/blob/master/LICENSE</PackageLicenseUrl>
