--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,3 +9,4 @@ before_build:
 
 test_script:
   - ps: dotnet test .\KD.FakeDb.XUnitTests\KD.FakeDb.XUnitTests.csproj
+  - ps: dotnet test .\KD.FakeDb.XUnitTests.Connection\KD.FakeDb.XUnitTests.Connection.csproj
