Separete abstract levels - Files and CSV

--- a/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
+++ b/KD.FakeDb.XUnitTests/KD.FakeDb.XUnitTests.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KD.FakeDb.Converter.DataSet\KD.FakeDb.Converter.DataSet.csproj" />
+    <ProjectReference Include="..\KD.FakeDb.Export.Files.CSV\KD.FakeDb.Export.Files.CSV.csproj" />
     <ProjectReference Include="..\KD.FakeDb.Export.Files\KD.FakeDb.Export.Files.csproj" />
     <ProjectReference Include="..\KD.FakeDb.Export\KD.FakeDb.Export.csproj" />
     <ProjectReference Include="..\KD.FakeDb.Factory\KD.FakeDb.Factory.csproj" />
