--- a/KD.FakeDb.Serialization.XML/KD.FakeDb.Serialization.XML.csproj
+++ b/KD.FakeDb.Serialization.XML/KD.FakeDb.Serialization.XML.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Krzysztof Dobrzynski</Authors>
     <Company>Krzysztof Dobrzynski</Company>
     <Copyright>https://github.com/Sejoslaw</Copyright>
