Simplified core functionality; Added new project for implementation of KD.FakeDb on XML files.

--- a/KD.FakeDb/KD.FakeDb.csproj
+++ b/KD.FakeDb/KD.FakeDb.csproj
@@ -9,6 +9,7 @@
     <PackageLicenseUrl>https://github.com/Sejoslaw/KD.FakeDb/blob/master/LICENSE</PackageLicenseUrl>
     <Authors>Krzysztof Dobrzynski</Authors>
     <Copyright>https://github.com/Sejoslaw</Copyright>
+    <Product>KD.FakeDb</Product>
   </PropertyGroup>
 
 </Project>
